fix: Removed negative z-index for working text cursor

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -1068,7 +1068,6 @@ blockquote.side-callout {
 .highlight {
   padding: 0 1rem 0 1rem;
   position: relative;
-  z-index: -1;
   flex: 1;
 
   code .cl {
@@ -1145,6 +1144,7 @@ li .code-block {
   position: absolute;
   margin-top: 8px;
   right: 1rem;
+  z-index: 2;
 }
 
 .code-copy-button:hover {
